--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,15 @@
     <string name="browse">Browse</string>
     <string name="login">Login</string>
     <string name="logout">Logout</string>
+    <string name="signUp">Create account</string>
+    <string name="newUser">New here? <b>Create an account</b> </string>
+
+    <!--Text View Strings -->
+    <string name="requiredText">Enter your details to log in to your account</string>
+    <string name="welcomeText">Welcome Back!</string>
+    <string name="createText">Create an account</string>
+    <string name="termsText">By clicking on "Create account" you agree to our Term of Use and Privacy Policy.</string>
+
+    <!--Fonts -->
+    <string name="fontSerif">sans-serif</string>
 </resources>
