--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,12 +11,16 @@
     <string name="logout">Logout</string>
     <string name="signUp">Create account</string>
     <string name="newUser">New here? <b>Create an account</b> </string>
+    <string name="emailLogin">Login with email</string>
 
     <!--Text View Strings -->
     <string name="requiredText">Enter your details to log in to your account</string>
     <string name="welcomeText">Welcome Back!</string>
     <string name="createText">Create an account</string>
     <string name="termsText">By clicking on "Create account" you agree to our Term of Use and Privacy Policy.</string>
+    <string name="backToLoggin">Have an account?<b>\nLogIn</b></string>
+    <string name="loading">Loading…</string>
+
 
     <!--Fonts -->
     <string name="fontSerif">sans-serif</string>
