--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,7 +21,7 @@
     <string name="termsText">By clicking on "Create account" you agree to our Term of Use and Privacy Policy.</string>
     <string name="backToLoggin">Have an account?<b>\nLogIn</b></string>
     <string name="loading">Loading…</string>
-
+    <string name="useTerms">Terms of Use</string>
 
     <!--Fonts -->
     <string name="fontSerif">sans-serif</string>
