Home Work 28.05.2018 Test Implementation

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -65,5 +65,6 @@
 
     <!--Notification Strings-->
     <string name="default_notification_channel_id">Channel ID</string>
+    <string name="auth_failed">Authentication Failed Sir</string>
 
 </resources>
